--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="24dp"
     tools:context=".MainActivity">
 
-
+    <!-- Welcome Text -->
     <TextView
         android:id="@+id/textView"
-        android:layout_width="333dp"
-        android:layout_height="130dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginTop="99dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginBottom="502dp"
-        android:text="Welcome To ApartmentRenter"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Welcome to ApartmentRenter"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:lineSpacingExtra="6dp"
+        android:paddingBottom="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/SignInButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
+    <!-- Sign In Button -->
+    <!-- Sign In Button -->
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/SignInButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
         android:text="Sign In"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="50dp" />
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#1E3A8A"
+        android:textColor="@android:color/white"
+        app:cornerRadius="12dp"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/SignUpButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:text="Sign Up"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="275dp" />
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:text="Create Account"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#0D9488"
+        android:textColor="@android:color/white"
+        app:cornerRadius="12dp"
+        app:layout_constraintTop_toBottomOf="@id/SignInButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="352dp"
+        android:layout_height="378dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SignUpButton"
+        app:srcCompat="@drawable/image"
+        tools:layout_editor_absoluteX="5dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
